# cer-sim

./: .gitignore  LICENSE  README.md  generate_models.py  shell commands.txt
catkin_ws/src/cer_rviz/: CMakeLists.txt  package.xml
catkin_ws/src/cer_rviz/cer/: yarpmotorgui.ini
catkin_ws/src/cer_rviz/cer/conf/: gazebo_cer_head.ini  gazebo_cer_left_hand.ini  gazebo_cer_left_upper_arm.ini  gazebo_cer_left_wrist.ini  gazebo_cer_mobile_base.ini  gazebo_cer_right_hand.ini  gazebo_cer_right_upper_arm.ini  gazebo_cer_right_wrist.ini  gazebo_cer_robotname.ini  gazebo_cer_torso_tripod.ini  gazebo_cer_torso_yaw.ini
catkin_ws/src/cer_rviz/cer/meshes/dae/: sim_cer_l_forearm_prt.dae  sim_cer_r_forearm_prt.dae  sim_cer_torso_chest_prt.dae
catkin_ws/src/cer_rviz/cer/meshes/dae/colorful/: sim_cer_mobilebase_l_tyre_prt.dae  sim_cer_mobilebase_r_tyre_prt.dae  sim_cer_r_arm.dae  sim_cer_torso_chest_prt.dae
catkin_ws/src/cer_rviz/cer/meshes/dae/colorful_fixed/: sim_cer_l_arm.dae  sim_cer_mobilebase_r_tyre_prt.dae
catkin_ws/src/cer_rviz/cer/meshes/stl/: sim_cer_l_shoulder_prt.stl  sim_cer_l_wrist_tripod_base_prt.stl  sim_cer_mobilebase_body_prt.stl  sim_cer_mobilebase_l_tyre_prt.stl  sim_cer_r_clavicle_prt.stl  sim_cer_r_hand_prt.stl  sim_cer_torso_chest_prt.stl  sim_cer_torso_tripod_platform_prt.stl  sim_cer_torso_tripod_slider_prt.stl
catkin_ws/src/cer_rviz/launch/: cer.launch  cer.v0.1.fake_arms.launch  cer.v0.1.launch
catkin_ws/src/cer_rviz/rviz/: cer.rviz
catkin_ws/src/cer_rviz/urdf/: cer.urdf  cer.v0.1.fake_arms.urdf  cer.v0.1.urdf  cer_fake_arms.urdf
catkin_ws/src/cer_rviz/urdf/meshes/dae/: sim_cer_l_clavicle.dae  sim_cer_l_forearm.dae  sim_cer_l_hand_paddle_distal.dae  sim_cer_l_hand_thumb_proximal.dae  sim_cer_l_shoulder.dae  sim_cer_l_upperarm.dae  sim_cer_l_upperarm_sensor.dae  sim_cer_l_wrist_cup_eq.dae  sim_cer_mobilebase_l_tyre.dae  sim_cer_neck.dae  sim_cer_r_hand_paddle_proximal.dae  sim_cer_r_hand_thumb_distal.dae  sim_cer_r_shoulder.dae  sim_cer_r_upperarm_sensor.dae  sim_cer_r_wrist_cup_eq.dae  sim_cer_torso_pin_eq.dae
catkin_ws/src/cer_rviz/urdf/meshes/stl/: sim_cer_head_prt.stl  sim_cer_l_wrist_cup_eq_prt.stl  sim_cer_l_wrist_slider_prt.stl  sim_cer_mobilebase_l_tyre_prt.stl  sim_cer_r_wrist_cup_eq_prt.stl
cer-gazebo/: database.config
colcon_ws/src/cer_description/: CMakeLists.txt  package.xml
colcon_ws/src/cer_description/urdf/: README.md  cer.urdf
colcon_ws/src/cer_description/urdf/meshes/dae/: checkerboard.dae  sim_cer_l_hand_thumb_distal.dae  sim_cer_mobilebase_l_tyre.dae  sim_cer_mobilebase_r_tyre.dae  sim_cer_r_elbow_sphere.dae  sim_cer_r_hand_paddle_distal.dae  sim_cer_r_upperarm.dae  sim_cer_torso_platform.dae
colcon_ws/src/cer_description/urdf/meshes/stl/: sim_cer_head_prt.stl  sim_cer_l_clavicle_prt.stl  sim_cer_l_elbow_sphere_prt.stl  sim_cer_l_hand_paddle_distal_prt.stl  sim_cer_l_hand_thumb_distal_prt.stl  sim_cer_l_hand_thumb_proximal_prt.stl  sim_cer_l_shoulder_prt.stl  sim_cer_l_wrist_cup_eq_prt.stl  sim_cer_mobilebase_body_prt.stl  sim_cer_neck_prt.stl  sim_cer_r_forearm_prt.stl  sim_cer_r_hand_paddle_distal_prt.stl  sim_cer_r_hand_paddle_proximal_prt.stl  sim_cer_r_hand_thumb_distal_prt.stl  sim_cer_r_hand_thumb_proximal_prt.stl  sim_cer_r_shoulder_prt.stl  sim_cer_r_upperarm_prt.stl  sim_cer_r_upperarm_sensor_prt.stl  sim_cer_r_wrist_slider_prt.stl  sim_cer_torso_platform_prt.stl
colcon_ws/src/cer_ros2_control/: CMakeLists.txt  package.xml
colcon_ws/src/cer_ros2_control/config/: cer_R1SN003_arms_initial_positions.yaml  cer_R1SN003_neck_initial_positions.yaml  cer_R1SN003_ros2_control_arms_pos_only.yaml  cer_sim_arms_initial_positions.yaml  cer_sim_neck_initial_positions.yaml  cer_sim_ros2_control_neck_pos_only.yaml
colcon_ws/src/cer_ros2_control/launch/: cer_R1SN003_arms_pos_only.launch.py  cer_R1SN003_neck_pos_only.launch.py  cer_control_base.launch.py  cer_sim_arms_pos_only.launch.py  cer_sim_neck_pos_only.launch.py
colcon_ws/src/cer_ros2_control/ros2_control/: cer_R1SN003_arms_pos_only.ros2_control.xacro  cer_R1SN003_neck_pos_only.ros2_control.xacro  cer_sim_arms_pos_only.ros2_control.xacro  cer_sim_neck_pos_only.ros2_control.xacro
colcon_ws/src/cer_ros2_control/urdf/: cer_R1SN003_arms_pos_only.urdf.xacro  cer_R1SN003_neck_pos_only.urdf.xacro  cer_sim_arms_pos_only.urdf.xacro  cer_sim_neck_pos_only.urdf.xacro
colcon_ws/src/cer_rviz2/: CMakeLists.txt  package.xml
colcon_ws/src/cer_rviz2/launch/: cer.launch  robot_state_publisher.launch  robot_state_publisher_sim.launch  robot_state_publisher_sim.launch.py  rviz2.launch
colcon_ws/src/cer_rviz2/rviz2/: cer.rviz  cer_config.rviz
colcon_ws/src/cer_rviz2/urdf/: cer.urdf
colcon_ws/src/cer_rviz2/urdf/meshes/dae/: sim_cer_head.dae  sim_cer_l_hand_paddle_distal.dae  sim_cer_l_hand_root.dae  sim_cer_l_hand_thumb_proximal.dae  sim_cer_l_upperarm.dae  sim_cer_mobilebase_body.dae  sim_cer_r_forearm.dae  sim_cer_r_hand_root.dae  sim_cer_r_hand_thumb_distal.dae
colcon_ws/src/cer_rviz2/urdf/meshes/stl/: sim_cer_chest_prt.stl  sim_cer_l_forearm_prt.stl  sim_cer_l_hand_paddle_proximal_prt.stl  sim_cer_l_hand_root_prt.stl  sim_cer_l_upperarm_prt.stl  sim_cer_l_upperarm_sensor_prt.stl  sim_cer_l_wrist_slider_prt.stl  sim_cer_mobilebase_l_tyre_prt.stl  sim_cer_mobilebase_r_tyre_prt.stl  sim_cer_r_clavicle_prt.stl  sim_cer_r_elbow_sphere_prt.stl  sim_cer_r_hand_root_prt.stl  sim_cer_r_wrist_cup_eq_prt.stl  sim_cer_torso_pin_eq_prt.stl  sim_cer_torso_slider_eq_prt.stl
conf/: yarpmotorgui.ini
dh_parameters/: cyclopic_camera_chain.ini  gaze_chain.ini  l_camera_chain.ini  l_wrist_tripod_base_chain_x_back.ini  r_camera_chain.ini  r_wrist_tripod_base_chain_x_back.ini  xtion_center_chain.ini  xtion_depth_chain.ini  xtion_rgb_chain.ini
gazebo/: database.config
resources/: SIM_CER_ROBOT.xml  (+3 more)
src/geomagic-marker/: CMakeLists.txt  GeomagicMarkerModule.cpp  GeomagicMarkerModule.h  GeomagicMarkerPort.cpp  GeomagicMarkerPort.h  main.cpp
src/geomagic-marker/visualization_msgs/: Marker.msg
src/pointCloudConversions/: CMakeLists.txt  RGBD2PointCloud.cpp  RGBD2PointCloud.hpp  Readme.md
(+457 files in other folders)
